--- a/appliances/opennebula/etc/openvpn/server.conf
+++ b/appliances/opennebula/etc/openvpn/server.conf
@@ -140,7 +140,7 @@ server 10.10.0.0 255.255.0.0
 # back to the OpenVPN server.
 #;push "route 192.168.10.0 255.255.255.0"
 #;push "route 192.168.20.0 255.255.255.0"
-push "route 10.10.0.0 255.255.0.0"
+;push "route 10.10.0.0 255.255.0.0"
 
 # To assign specific IP addresses to specific
 # clients or if a connecting client has a private
