Use 'mode server' instead of 'server-bridge'

--- a/appliances/opennebula/etc/openvpn/server.conf
+++ b/appliances/opennebula/etc/openvpn/server.conf
@@ -97,7 +97,7 @@ dh /etc/openvpn/keys/dh1024.pem
 # on 10.8.0.1. Comment this line out if you are
 # ethernet bridging. See the man page for more info.
 #server 10.8.0.0 255.255.255.0
-;server 10.10.0.0 255.255.0.0
+mode server
 
 # Maintain a record of client <-> virtual IP address
 # associations in this file.  If OpenVPN goes down or
@@ -129,7 +129,7 @@ dh /etc/openvpn/keys/dh1024.pem
 # Note: this mode only works on clients (such as
 # Windows), where the client-side TAP adapter is
 # bound to a DHCP client.
-server-bridge
+;server-bridge
 
 # Push routes to the client to allow it
 # to reach other private subnets behind
