Update openvpn configurations

--- a/appliances/opennebula/etc/openvpn/server.conf
+++ b/appliances/opennebula/etc/openvpn/server.conf
@@ -243,6 +243,7 @@ keepalive 10 120
 # The second parameter should be '0'
 # on the server and '1' on the clients.
 ;tls-auth ta.key 0 # This file is secret
+;auth none
 
 # Select a cryptographic cipher.
 # This config item must be copied to
@@ -250,6 +251,7 @@ keepalive 10 120
 ;cipher BF-CBC        # Blowfish (default)
 ;cipher AES-128-CBC   # AES
 ;cipher DES-EDE3-CBC  # Triple-DES
+;cipher none
 
 # Enable compression on the VPN link.
 # If you enable it here, you must also
