--- a/appliances/frontend/etc/openvpn/server.conf
+++ b/appliances/frontend/etc/openvpn/server.conf
@@ -117,7 +117,8 @@ mode server
 # to connecting clients.  Leave this line commented
 # out unless you are ethernet bridging.
 #;server-bridge 10.8.0.4 255.255.255.0 10.8.0.50 10.8.0.100
-;server-bridge 10.10.1.1 255.255.0.0 10.10.1.2 10.10.255.255
+;server-bridge 10.10.1.1 255.255.0.0 10.10.2.0 10.10.255.254
+;server-bridge 10.10.1.1 255.255.0.0 10.10.1.2 10.10.1.254
 
 # Configure server mode for ethernet bridging
 # using a DHCP-proxy, where clients talk
@@ -243,6 +244,7 @@ keepalive 10 120
 # The second parameter should be '0'
 # on the server and '1' on the clients.
 ;tls-auth ta.key 0 # This file is secret
+auth none
 
 # Select a cryptographic cipher.
 # This config item must be copied to
@@ -250,11 +252,12 @@ keepalive 10 120
 ;cipher BF-CBC        # Blowfish (default)
 ;cipher AES-128-CBC   # AES
 ;cipher DES-EDE3-CBC  # Triple-DES
+cipher none
 
 # Enable compression on the VPN link.
 # If you enable it here, you must also
 # enable it in the client config file.
-comp-lzo
+;comp-lzo
 
 # The maximum number of concurrently connected
 # clients we want to allow.
