--- a/appliances/vm_container/etc/openvpn/client.conf
+++ b/appliances/vm_container/etc/openvpn/client.conf
@@ -105,16 +105,18 @@ ns-cert-type server
 # If a tls-auth key is used on the server
 # then every client must also have the key.
 ;tls-auth ta.key 1
+auth none
 
 # Select a cryptographic cipher.
 # If the cipher option is used on the server
 # then you must also specify it here.
 ;cipher x
+cipher none
 
 # Enable compression on the VPN link.
 # Don't enable this unless it is also
 # enabled in the server config file.
-comp-lzo
+;comp-lzo
 
 # Speficy  log file
 log		/var/log/openvpn-client.log
